# cuda_helloworld

./: CMakeLists.txt  readme.md
src/: addv1.cu  addv2.cu  hello_cub.cu
test/: simple_test.cpp
